[gd_scene load_steps=75 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/char 1.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/Sowrdhitbox.gd" type="Script" id=4]
[ext_resource path="res://Overlap/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shadow/SmallShadow.png" type="Texture" id=6]

[sub_resource type="Shader" id=115]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment(){
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true){
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=116]
shader = SubResource( 115 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=110]
radius = 3.26335
height = 4.92234

[sub_resource type="Animation" id=2]
resource_name = "AttackLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 36, 35, 34, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Hitboxpivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Hitboxpivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "AttackRight"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Hitboxpivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Hitboxpivot:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=82]
resource_name = "DeathLeft"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 69, 68, 67, 66, 65, 64, 63, 62 ]
}

[sub_resource type="Animation" id=83]
resource_name = "DeathRight"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57, 58, 59 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleLeft"
length = 0.7
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleRight"
length = 0.7
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Hitboxpivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "RunLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 24, 23, 22, 21, 20, 19, 18 ]
}

[sub_resource type="Animation" id=8]
resource_name = "RunRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=95]
resource_name = "ShieldLeft"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 51, 50 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shield_animation_finished"
} ]
}

[sub_resource type="Animation" id=96]
resource_name = "ShieldRight"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 48, 49 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shield_animation_finished"
} ]
}

[sub_resource type="Animation" id=36]
resource_name = "StopLeft"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=37]
resource_name = "StopRight"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=68]
resource_name = "turnleft "
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=69]
resource_name = "turnright"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "AttackRight"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "AttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=52]
blend_point_0/node = SubResource( 48 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 49 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 50 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 51 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=84]
animation = "DeathLeft"

[sub_resource type="AnimationNodeAnimation" id=85]
animation = "DeathRight"

[sub_resource type="AnimationNodeAnimation" id=86]
animation = "DeathLeft"

[sub_resource type="AnimationNodeAnimation" id=87]
animation = "DeathRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=88]
blend_point_0/node = SubResource( 84 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 85 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 86 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 87 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=57]
blend_point_0/node = SubResource( 53 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 54 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 55 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 56 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "RunRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=62]
blend_point_0/node = SubResource( 58 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 59 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 60 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 61 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=97]
animation = "ShieldLeft"

[sub_resource type="AnimationNodeAnimation" id=98]
animation = "ShieldRight"

[sub_resource type="AnimationNodeAnimation" id=99]
animation = "ShieldLeft"

[sub_resource type="AnimationNodeAnimation" id=100]
animation = "ShieldRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=101]
blend_point_0/node = SubResource( 97 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 98 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 99 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 100 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]

[sub_resource type="AnimationNodeStateMachineTransition" id=89]

[sub_resource type="AnimationNodeStateMachineTransition" id=90]

[sub_resource type="AnimationNodeStateMachineTransition" id=93]

[sub_resource type="AnimationNodeStateMachineTransition" id=94]

[sub_resource type="AnimationNodeStateMachineTransition" id=102]

[sub_resource type="AnimationNodeStateMachineTransition" id=103]

[sub_resource type="AnimationNodeStateMachineTransition" id=104]

[sub_resource type="AnimationNodeStateMachineTransition" id=105]

[sub_resource type="AnimationNodeStateMachineTransition" id=106]

[sub_resource type="AnimationNodeStateMachineTransition" id=107]

[sub_resource type="AnimationNodeStateMachineTransition" id=108]

[sub_resource type="AnimationNodeStateMachineTransition" id=109]

[sub_resource type="AnimationNodeStateMachineTransition" id=111]

[sub_resource type="AnimationNodeStateMachineTransition" id=112]

[sub_resource type="AnimationNodeStateMachineTransition" id=113]

[sub_resource type="AnimationNodeStateMachineTransition" id=114]

[sub_resource type="AnimationNodeStateMachine" id=67]
states/Attack/node = SubResource( 52 )
states/Attack/position = Vector2( 392, 181 )
states/Death/node = SubResource( 88 )
states/Death/position = Vector2( 615, 181 )
states/Idle/node = SubResource( 57 )
states/Idle/position = Vector2( 392, 64 )
states/Run/node = SubResource( 62 )
states/Run/position = Vector2( 626, 64 )
states/Shield/node = SubResource( 101 )
states/Shield/position = Vector2( 505, 309.325 )
transitions = [ "Idle", "Attack", SubResource( 63 ), "Attack", "Idle", SubResource( 64 ), "Idle", "Death", SubResource( 89 ), "Death", "Idle", SubResource( 90 ), "Death", "Attack", SubResource( 93 ), "Attack", "Death", SubResource( 94 ), "Attack", "Shield", SubResource( 102 ), "Shield", "Attack", SubResource( 103 ), "Death", "Shield", SubResource( 104 ), "Shield", "Death", SubResource( 105 ), "Idle", "Shield", SubResource( 106 ), "Shield", "Idle", SubResource( 107 ), "Run", "Shield", SubResource( 108 ), "Shield", "Run", SubResource( 109 ), "Idle", "Run", SubResource( 111 ), "Run", "Idle", SubResource( 112 ), "Run", "Death", SubResource( 113 ), "Death", "Run", SubResource( 114 ) ]
start_node = "Idle"
graph_offset = Vector2( -39, 11.5337 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=29]

[sub_resource type="CircleShape2D" id=47]
radius = 18.8384

[sub_resource type="CapsuleShape2D" id=81]
radius = 4.65248
height = 5.37529

[sub_resource type="Animation" id=117]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=118]
resource_name = "start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=119]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 24, 16 )
collision_layer = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 116 )
position = Vector2( 5, -1 )
scale = Vector2( 1, 0.990654 )
texture = ExtResource( 2 )
hframes = 8
vframes = 9
frame = 49

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 4.36323, 11.0678 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 9 )
rotation = 1.5708
shape = SubResource( 110 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
reset_on_save = false
anims/AttackLeft = SubResource( 2 )
anims/AttackRight = SubResource( 3 )
anims/DeathLeft = SubResource( 82 )
anims/DeathRight = SubResource( 83 )
anims/IdleLeft = SubResource( 4 )
anims/IdleRight = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/RunLeft = SubResource( 7 )
anims/RunRight = SubResource( 8 )
anims/ShieldLeft = SubResource( 95 )
anims/ShieldRight = SubResource( 96 )
anims/StopLeft = SubResource( 36 )
anims/StopRight = SubResource( 37 )
"anims/turnleft " = SubResource( 68 )
anims/turnright = SubResource( 69 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 67 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 29 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Death/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 1, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )
parameters/Shield/blend_position = Vector2( 0, 0 )

[node name="Hitboxpivot" type="Position2D" parent="."]
position = Vector2( 3, 0 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="SwordHitbox" parent="Hitboxpivot" instance=ExtResource( 3 )]
position = Vector2( 0, 11 )
collision_layer = 0
collision_mask = 136
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="Hitboxpivot/SwordHitbox" index="0"]
position = Vector2( -3, -11 )
rotation = 1.5708
shape = SubResource( 47 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
position = Vector2( 2.42045, -0.157669 )
collision_layer = 68
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 2.35824, 3.39731 )
shape = SubResource( 81 )

[node name="Blinkanimationplayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 117 )
anims/start = SubResource( 118 )
anims/stop = SubResource( 119 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]

[editable path="Hitboxpivot/SwordHitbox"]
[editable path="HurtBox"]
